Tweaked Parallel and ZGC